@@ -9,21 +9,33 @@ import java.util.stream.Stream;
 
 public class FileReader {
 
-    public void readFile() {
-        ClassLoader classLoader = getClass().getClassLoader();
-        File file = new File(classLoader.getResource("names.txt").getFile());
-        //Path path = Paths.get("tego-pliku-nie-ma.txt");
+//    public void readFile() throws  FileReaderException{
+//        ClassLoader classLoader = getClass().getClassLoader();
+//        File file = new File(classLoader.getResource("names.txt").getFile());
+//
+//        try (Stream<String> fileLines = Files.lines(Paths.get(file.getPath()))) {
+//            fileLines.forEach(System.out::println);
+//        } catch (IOException e) {
+//            //System.out.println("Something went wrong! Error:" + e);
+//            throw new FileReaderException();
+//        } finally {
+//            System.out.println("I am gonna be here... always!");
+//        }
+//
+//        System.out.println(file.getPath());
+//
+//    }
 
-        try (Stream<String> fileLines = Files.lines(Paths.get(file.getPath()))) {
+    public void readFile(final String fileName) throws FileReaderException {
+        ClassLoader classLoader = getClass().getClassLoader();
+
+        try (Stream<String> fileLines = Files.lines(Path.of(classLoader.getResource(fileName).toURI()))) {
             fileLines.forEach(System.out::println);
-        } catch (IOException e) {
-            System.out.println("Something went wrong! Error:" + e);
+        } catch (Exception e) {
+            throw new FileReaderException();
         } finally {
             System.out.println("I am gonna be here... always!");
         }
-
-        System.out.println(file.getPath());
-
     }
 
 
